# SmartWallet

./: .env  .gitignore  bot.py  config.py  keyboards.py  main.py  pyproject.toml  receipt_test.py
app/: bot.py
assets/diagrams/: component_knowledge_base.puml
diagrams/: component_advice.puml  er_advice.puml  er_knowledgebase.puml  usecase.puml
domain/entities/: goal.py  transaction.py  user.py
handlers/: advice_handler.py  base_handler.py  expense_handler.py  goal_handler.py  goals_handler.py  income_handler.py
infrastructure/: sqlite_goals_repository.py  sqlite_transaction_repository.py  sqlite_user_repository.py  yaml_categories_repository.py
knowledge_base/: advices.yml  categories.yml  goals_db.sqlite3  knowledge_base.yml  transactions_db.sqlite3  users.yml  users_db.sqlite3
model/: basic_classifier.py  dataset.csv  model.py
model/dumps/: model.joblib  vectorizer.joblib
repository/: base_categories_repository.py  base_goals_repository.py  base_transaction_repository.py  base_user_repository.py
services/: get_categories.py  receipt_parser.py  sheduler.py  text_processing.py
use_cases/: add_expense_user_case.py  add_income_use_case.py  change_goal_desc_use_case.py  delete_goal_use_case.py  display_user_goals_use_case.py  exceeding_the_limit_use_case.py  exceptions.py  give_advice_use_case.py  notification_use_case.py  save_goal_use_case.py  update_goal_use_case.py  user_register_use_case.py
utils/: text_processing.py
