[project]
name = "smartwallet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.26.0",
    "dotenv>=0.9.9",
    "joblib>=1.5.3",
    "pandas>=3.0.1",
    "pymorphy3>=2.0.6",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
]
